--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Science fiction'
 - !lcsh 'Short stories'
+- GITenberg
 title: Revenge
 url: http://www.gutenberg.org/ebooks/27756
